# gorgias-mcp

./: AGENTS.md  Dockerfile  README.md  config.yaml  env.example  pyproject.toml  ruff.toml  run.sh
gorgias_mcp_server/: access_control.py  cache.py  client.py  errors.py  fuzzy_match.py  projection.py  reporting_knowledge.py  server.py
gorgias_mcp_server/tools/: _helpers.py  account.py  custom_fields.py  customers.py  events.py  files.py  integrations.py  jobs.py  macros.py  reporting.py  rules.py  satisfaction_surveys.py  search.py  smart_search.py  smart_stats.py  smart_ticket_detail.py  tags.py  teams.py  ticket_messages.py  tickets.py  users.py  views.py  voice_calls.py  widgets.py
gorgias_mcp_server/utils/: auth.py
tests/: test_http.py  test_stdio.py
